# Poker_Analysis

./: .gitignore  LICENSE  README.md  poker_sessions.json
Poker_Hand/: CMakeLists.txt  POSTFLOP_README.md  QUICK_START.md  README.md  build.bat
Poker_Hand/output/: hand_equity_data.json  position_ranges.json  scenario_analysis.json  stack_depth_adjustments.json
Poker_Hand/output/6_player/BB/3_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/BB/4_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/BB/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/6_player/BTN/3_bet/: high_winrate_hands.csv  low_winrate_hands.csv
Poker_Hand/output/6_player/BTN/4_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/BTN/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/6_player/CO/3_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/CO/4_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/CO/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/6_player/HJ/3_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/HJ/4_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/HJ/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/6_player/SB/3_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/SB/4_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/SB/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/6_player/UTG/3_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/UTG/4_bet/: low_winrate_hands.csv
Poker_Hand/output/6_player/UTG/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/BB/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/BB/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/BB/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/BTN/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/BTN/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/BTN/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/CO/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/CO/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/CO/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/HJ/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/HJ/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/HJ/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/MP1/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/MP1/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/MP1/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/MP2/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/MP2/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/MP2/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/SB/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/SB/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/SB/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/UTG/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/UTG/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/UTG/opening_raise/: low_winrate_hands.csv
Poker_Hand/output/9_player/UTG1/3_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/UTG1/4_bet/: low_winrate_hands.csv
Poker_Hand/output/9_player/UTG1/opening_raise/: low_winrate_hands.csv
Poker_Hand/src/: main.cpp
Poker_Hand/src/analysis/: equity_calculator.cpp  hand_ranges.cpp  poker_analyzer.cpp  poker_analyzer.hpp  realistic_ranges.cpp  realistic_ranges.hpp
Poker_Hand/src/commands/: README.md  board_analysis_command.cpp  board_analysis_command.hpp  command_base.hpp  command_registry.cpp  command_registry.hpp  flop_analysis_command.cpp  flop_analysis_command.hpp  postflop_analysis_command.cpp  postflop_analysis_command.hpp  realistic_ranges_command.cpp  realistic_ranges_command.hpp  training_data_command.cpp  training_data_command.hpp
Poker_Hand/src/core/: card.cpp  deck.cpp  deck.hpp  hand_evaluator.cpp  hand_evaluator.hpp  types.hpp
Poker_Hand/src/engine/: monte_carlo_engine.cpp  monte_carlo_engine.hpp  parallel_simulator.cpp  simd_optimizer.cpp  simd_optimizer.hpp
Poker_Hand/src/ui/: console_output.cpp  console_output.hpp  progress_display.cpp  progress_display.hpp
Poker_Hand/src/utils/: bit_utils.hpp  cpu_features.cpp  csv_exporter.cpp  csv_exporter.hpp  json_output.cpp  performance_profiler.cpp
Poker_Hand/src/visualization/: board_analysis_viz.py  main.py
Poker_Hands/: CMakeLists.txt  README.md  build_unix.sh  build_windows.bat  build_windows.ps1  main.cpp
Poker_Hands/include/: analyzer.h  card.h  hand.h  platform_utils.h  simulator.h
Poker_Hands/src/: analyzer.cpp  card.cpp  hand.cpp  platform_utils.cpp  simulator.cpp
Poker_Hands/tests/: CMakeLists.txt  test_main.cpp
Poker_Trainer/: app.py  main_app.py  monte_carlo_poker_prompt.txt  requirements.txt  run_app.py
Poker_Trainer/components/: action_buttons.py  card_display.py  feedback_system.py  range_trainer.py
Python-Poker-Tracker/: alpha_decay.py  alpha_display.py  analytics.py  display.py  menu.py  new_deposit.py  poker_tracker.py  quant_display.py
Trainer/: README.md  app.py  test_integration.py
data/: poker_trainer.db  user_data.db
hands/: CMakeLists.txt  QUICK_START.md  README.md  build.bat
hands/src/: dynamic_main.cpp  main.cpp
hands/src/analysis/: accelerated_decision_engine.cpp  accelerated_decision_engine.hpp  decision_engine.cpp  decision_engine.hpp  dynamic_monte_carlo_analyzer.cpp  dynamic_monte_carlo_analyzer.hpp  poker_analyzer.cpp  poker_analyzer.hpp
hands/src/core/: deck.cpp  deck.hpp  hand_evaluator.cpp  hand_evaluator.hpp  types.cpp  types.hpp
hands/src/engine/: monte_carlo_engine.cpp  monte_carlo_engine.hpp  simd_optimizer.cpp  simd_optimizer.hpp  thread_pool.cpp  thread_pool.hpp
hands/src/visualization/: main.py
plots/: category_analysis.txt  top_hands_report.txt
poker-tests/poker_analyzer/: CMakeLists.txt  README.md
poker-tests/poker_analyzer/src/: main.cpp  poker_analyzer.cpp  poker_analyzer.hpp
poker-tests/poker_analyzer/visuals/: main.py  requirements.txt
(+30 files in other folders)
